chore: align style, clean project residue, and unify API/CORS config